--- a/draggable.vcxproj
+++ b/draggable.vcxproj
@@ -121,6 +121,8 @@
     <None Include="draggable.css" />
     <None Include="draggable.js" />
     <None Include="index.html" />
+    <None Include="LICENSE" />
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
